--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,10 @@ typings/
 
 # dotenv environment variables file
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -75,3 +79,15 @@ typings/
 # FuseBox cache
 .fusebox/
 .DS_Store
+
+
+# dependencies
+/web/node_modules
+/web/.pnp
+.pnp.js
+
+# testing
+/web/coverage
+
+# production
+/web/build
