--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-spotify-login": "^0.9.1",
     "sass-loader": "^7.1.0",
     "tslint": "^5.12.1",
     "typescript": "^3.2.2"
