--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "@types/react-router": "^4.4.3",
     "@types/react-router-bootstrap": "^0.24.5",
     "bootstrap": "^4.2.1",
+    "formik": "^1.5.1",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
