--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "node -r dotenv/config ./bin/www"
+    "dev": "nodemon -r dotenv/config ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -18,6 +18,7 @@
     "spotify-web-api-node": "^4.0.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.2"
   }
 }
