--- a/api/package.json
+++ b/api/package.json
@@ -19,13 +19,16 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "mongojs": "^2.6.0",
+    "mongoist": "^2.4.0",
+    "mongojs": "^3.1.0",
     "morgan": "~1.9.0",
     "spotify-web-api-node": "^4.0.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
+    "@types/spotify-api": "0.0.2",
+    "@types/spotify-web-api-node": "^4.0.1",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.2",
     "ts-node": "^8.6.1",
