--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -5,6 +5,7 @@
         "baseUrl": "./",
         "outDir": "build",
         "removeComments": true,
+        "esModuleInterop": true,
         "experimentalDecorators": true,
         "target": "es6",
         "emitDecoratorMetadata": true,
@@ -12,7 +13,8 @@
         "importHelpers": true,
         "noImplicitAny": false,
         "types": [
-            "node"
+            "node",
+            "spotify-api"
         ],
         "typeRoots": [
             "node_modules/@types"
