--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express-generator": "^4.16.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "typescript": "^3.7.5"
   },
   "devDependencies": {
     "npm-run-all": "^4.0.2"
