--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "express-http-context": "^1.2.3",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "lodash": "^4.17.15",
     "mongoist": "^2.4.0",
     "morgan": "~1.9.0",
     "spotify-web-api-node": "^4.0.0"
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
+    "@types/lodash": "^4.14.149",
     "@types/spotify-api": "0.0.2",
     "@types/spotify-web-api-node": "^4.0.1",
     "dotenv": "^8.2.0",
