--- a/web/package.json
+++ b/web/package.json
@@ -40,6 +40,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/spotify-api": "0.0.2",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "customize-cra": "^0.9.1",
