--- a/api/package.json
+++ b/api/package.json
@@ -31,7 +31,10 @@
     "@types/lodash": "^4.14.149",
     "@types/spotify-api": "0.0.2",
     "@types/spotify-web-api-node": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
     "dotenv": "^8.2.0",
+    "eslint": "5.6.0",
     "nodemon": "^2.0.2",
     "ts-node": "^8.6.1",
     "tslint": "^5.20.1",
