--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "typescript": "^3.7.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "eslint": "5.6.0",
     "npm-run-all": "^4.0.2"
   },
   "scripts": {
