--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-select": "^3.0.8",
     "react-spotify-login": "^0.9.1",
     "sass-loader": "^7.1.0",
     "tslint": "^5.12.1",
@@ -41,7 +42,10 @@
   ],
   "devDependencies": {
     "@types/lodash": "^4.14.149",
+    "@types/react-select": "^3.0.10",
     "@types/spotify-api": "0.0.2",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "customize-cra": "^0.9.1",
