--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "proxy": "http://localhost:8080/",
   "dependencies": {
+    "@material-ui/core": "^4.9.1",
+    "@material-ui/icons": "^4.9.1",
     "@types/react": "^16.7.18",
     "@types/react-bootstrap": "^0.32.15",
     "@types/react-dom": "^16.0.11",
