--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
         ],
         "no-console": 0,
         "no-multi-spaces": 1,
+        "no-shadow": 2,
         "no-useless-catch": 0,
         "quotes": [
             "error",
@@ -43,6 +44,7 @@
         ],
 
         "@typescript-eslint/explicit-function-return-type": 0,
+        "@typescript-eslint/no-empty-function": 0,
         "@typescript-eslint/no-empty-interface": [ 1, { "allowSingleExtends": true } ],
         "@typescript-eslint/no-explicit-any": 0
     }
