--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/lodash": "^4.14.149",
+    "@types/mongodb": "^3.3.16",
     "@types/spotify-api": "0.0.2",
     "@types/spotify-web-api-node": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
