--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,6 +46,8 @@
         "@typescript-eslint/explicit-function-return-type": 0,
         "@typescript-eslint/no-empty-function": 0,
         "@typescript-eslint/no-empty-interface": [ 1, { "allowSingleExtends": true } ],
-        "@typescript-eslint/no-explicit-any": 0
+        "@typescript-eslint/no-explicit-any": 0,
+        "@typescript-eslint/no-non-null-assertion": 0,
+        "@typescript-eslint/no-use-before-define": 0
     }
 }
