--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "typescript": "^3.7.5"
   },
   "devDependencies": {
+    "@types/mongodb": "^3.3.16",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "eslint": "5.6.0",
     "npm-run-all": "^4.0.2"
