Add session tokens, fix refresh token and retry logic

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
             "unix"
         ],
         "no-console": 0,
+        "no-empty": 1,
         "no-multi-spaces": 1,
         "no-shadow": 2,
         "no-useless-catch": 0,
@@ -43,11 +44,14 @@
             "always"
         ],
 
+        "@typescript-eslint/camelcase": 1,
         "@typescript-eslint/explicit-function-return-type": 0,
         "@typescript-eslint/no-empty-function": 0,
         "@typescript-eslint/no-empty-interface": [ 1, { "allowSingleExtends": true } ],
         "@typescript-eslint/no-explicit-any": 0,
+        "@typescript-eslint/no-inferrable-types": 0,
         "@typescript-eslint/no-non-null-assertion": 0,
-        "@typescript-eslint/no-use-before-define": 0
+        "@typescript-eslint/no-use-before-define": 0,
+        "@typescript-eslint/no-var-requires": 0
     }
 }
