--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "esm": "^3.2.25",
     "express": "~4.16.0",
     "express-http-context": "^1.2.3",
+    "express-session": "^1.17.0",
     "http-errors": "^1.6.3",
     "jade": "~1.11.0",
     "lodash": "^4.17.15",
@@ -31,6 +32,7 @@
     "@types/agenda": "^2.0.6",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
+    "@types/express-session": "^1.17.0",
     "@types/http-errors": "^1.6.3",
     "@types/lodash": "^4.14.149",
     "@types/mongodb": "^3.3.16",
