Fix concurrent use of spotify api

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
             "error",
             "single"
         ],
+        "require-await": 1,
         "semi": [
             "error",
             "always"
