--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-bootstrap": "^0.24.5",
     "bootstrap": "^4.2.1",
     "formik": "^1.5.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
