--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "debug": "~2.6.9",
     "esm": "^3.2.25",
     "express": "~4.16.0",
+    "express-async-handler": "^1.1.4",
     "express-http-context": "^1.2.3",
     "express-session": "^1.17.0",
     "http-errors": "^1.6.3",
