--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
+    "react-redux": "^7.2.0",
     "react-router": "^4.3.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
@@ -44,6 +45,7 @@
   ],
   "devDependencies": {
     "@types/lodash": "^4.14.149",
+    "@types/react-redux": "^7.1.7",
     "@types/react-select": "^3.0.10",
     "@types/spotify-api": "0.0.2",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
