--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,7 +48,7 @@
         "@typescript-eslint/camelcase": 1,
         "@typescript-eslint/explicit-function-return-type": 0,
         "@typescript-eslint/no-empty-function": 0,
-        "@typescript-eslint/no-empty-interface": [ 1, { "allowSingleExtends": true } ],
+        "@typescript-eslint/no-empty-interface": 0,
         "@typescript-eslint/no-explicit-any": 0,
         "@typescript-eslint/no-inferrable-types": 0,
         "@typescript-eslint/no-non-null-assertion": 0,
