--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "engines": {
+    "node": "10.15.x",
+    "npm": "6.4.x"
+  }
 }
