--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
+    "react-app-rewired": "^2.1.5",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
     "react-redux": "^7.2.0",
@@ -53,7 +54,6 @@
     "@typescript-eslint/parser": "^2.19.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "customize-cra": "^0.9.1",
-    "react-app-rewired": "^2.1.5"
+    "customize-cra": "^0.9.1"
   }
 }
