--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@types/react-router": "^4.4.3",
     "@types/react-router-bootstrap": "^0.24.5",
     "bootstrap": "^4.2.1",
+    "customize-cra": "^0.9.1",
     "formik": "^1.5.1",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
@@ -53,7 +54,6 @@
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "customize-cra": "^0.9.1"
+    "babel-preset-env": "^1.7.0"
   }
 }
