--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-select": "^3.0.8",
+    "redux": "^4.0.5",
     "sass-loader": "^7.1.0",
     "tslint": "^5.12.1",
     "typescript": "^3.2.2"
