--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-generator": "^4.16.0",
+    "npm-run-all": "^4.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
@@ -13,8 +14,7 @@
   "devDependencies": {
     "@types/mongodb": "^3.3.16",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "eslint": "5.6.0",
-    "npm-run-all": "^4.0.2"
+    "eslint": "5.6.0"
   },
   "scripts": {
     "postinstall": "run-p install:api install:web",
