--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -22,7 +22,8 @@
         ]
     },
     "include": [
-        "./src/**/*.ts"
+        "./src/**/*.ts",
+        "../shared/src"
     ],
     "exclude": [
         "./src/public/"
