Fix link to API for environment support

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -22,8 +22,7 @@
         ]
     },
     "include": [
-        "./src/**/*.ts",
-        "../shared/src"
+        "./src/**/*.ts"
     ],
     "exclude": [
         "./src/public/"
