Fix for env var and create-react-app issue

--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "postinstall": "run-p install:api install:web",
     "install:api": "cd api && npm install",
     "install:web": "cd web && npm install",
-    "start": "run-p start:api start:web",
+    "start": "npm run start:api",
     "start:api": "npm run start --prefix api",
     "start:web": "npm run start --prefix web",
+    "dev": "run-p dev:api dev:web",
+    "dev:api": "npm run dev --prefix api",
+    "dev:web": "npm run start --prefix web",
     "build": "run-p build:api build:web",
     "build:api": "cd api && npm run build",
     "build:web": "cd web && npm run build",
