--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "@types/spotify-api": "0.0.2",
     "@types/spotify-web-api-node": "^4.0.1",
     "agenda": "^3.0.0",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
