--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
             "unix"
         ],
         "no-console": 0,
+        "no-constant-condition": 1,
         "no-empty": 1,
         "no-multi-spaces": 1,
         "no-shadow": 2,
