--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,7 @@
         "@typescript-eslint/no-empty-function": 0,
         "@typescript-eslint/no-empty-interface": 0,
         "@typescript-eslint/no-explicit-any": 0,
+        "@typescript-eslint/no-floating-promises": 1,
         "@typescript-eslint/no-inferrable-types": 0,
         "@typescript-eslint/no-non-null-assertion": 0,
         "@typescript-eslint/no-use-before-define": 0,
