--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -12,10 +12,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "strict": false,
-    "strictNullChecks": true,
-    "types": [
-      "spotify-api"
-    ]
+    "strictNullChecks": true
   },
   "include": [
     "src",
