--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -20,6 +20,9 @@
             "node_modules/@types"
         ]
     },
+    "ts-node": {
+        "files": true
+    },
     "include": [
         "./src/**/*.ts"
     ],
