--- a/api/package.json
+++ b/api/package.json
@@ -30,7 +30,8 @@
     "mongodb": "^3.5.3",
     "mongoist": "^2.4.0",
     "morgan": "~1.9.0",
-    "spotify-web-api-node": "^4.0.0"
+    "spotify-web-api-node": "^4.0.0",
+    "ts-node": "^8.6.1"
   },
   "devDependencies": {
     "@seiren/mongoutils": "^1.0.2",
@@ -48,7 +49,6 @@
     "eslint": "5.6.0",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
-    "ts-node": "^8.6.1",
     "tslint": "^5.20.1",
     "typescript": "^3.7.4"
   }
