--- a/web/package.json
+++ b/web/package.json
@@ -48,6 +48,7 @@
     "@types/lodash": "^4.14.149",
     "@types/react-lazyload": "^2.6.0",
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.6",
     "@types/react-select": "^3.0.10",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
