--- a/api/package.json
+++ b/api/package.json
@@ -33,7 +33,8 @@
     "morgan": "~1.9.0",
     "rimraf": "^3.0.2",
     "spotify-web-api-node": "^4.0.0",
-    "ts-node": "^8.6.1"
+    "ts-node": "^8.6.1",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/agenda": "^2.0.6",
