Move up esModuleInterop to base tsconfig

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,6 +8,7 @@
             "es6"
         ],
         "skipLibCheck": true,
+        "esModuleInterop": true,
         "types": [
             "spotify-api"
         ]
