--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/mongodb": "^3.3.16",
