--- a/web/package.json
+++ b/web/package.json
@@ -28,7 +28,8 @@
     "redux": "^4.0.5",
     "sass-loader": "^7.1.0",
     "tslint": "^5.12.1",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "winston": "^3.3.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
