--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "react": "^16.7.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.7.0",
+    "react-ga": "^3.3.0",
     "react-lazyload": "^3.0.0",
     "react-redux": "^7.2.0",
     "react-router": "^4.3.1",
