Update eslint packages and update eslint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,12 @@
         "ecmaVersion": 2018,
         "sourceType": "module"
     },
+    "plugins": [
+        "import"
+    ],
     "rules": {
+        "arrow-parens": 2,
+        "eol-last": 2,
         "indent": [
             "error",
             4,
@@ -35,7 +40,9 @@
         "no-empty": 1,
         "no-multi-spaces": 1,
         "no-shadow": 2,
+        "no-trailing-spaces": 2,
         "no-useless-catch": 0,
+        "prefer-template": 2,
         "quotes": [
             "error",
             "single"
@@ -45,9 +52,44 @@
             "error",
             "always"
         ],
+        
+        "import/no-cycle": 2,
+        "import/no-extraneous-dependencies": 2,
+        "import/order": [ 2, {
+            "newlines-between": "always",
+            "alphabetize": {
+                "order": "asc",
+                "caseInsensitive": true
+            }
+        } ],
 
-        "@typescript-eslint/camelcase": 1,
+        "@typescript-eslint/comma-dangle": [ "error", "always-multiline" ],
         "@typescript-eslint/explicit-function-return-type": 0,
+        "@typescript-eslint/indent": [2, 4],
+        "@typescript-eslint/naming-convention": [
+            1,
+            {
+                "selector": "variable",
+                "format": [
+                    "camelCase",
+                    "PascalCase",
+                    "UPPER_CASE"
+                ]
+            },
+            {
+                "selector": "function",
+                "format": [
+                    "camelCase",
+                    "PascalCase"
+                ]
+            },
+            {
+                "selector": "typeLike",
+                "format": [
+                    "PascalCase"
+                ]
+            }
+        ],
         "@typescript-eslint/no-empty-function": 0,
         "@typescript-eslint/no-empty-interface": 0,
         "@typescript-eslint/no-explicit-any": 0,
