--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "start": "node build/api/src/start.js",
     "dev": "nodemon",
     "build": "rm -rf ./build/ && npm run dbupgrade && tsc",
+    "lint": "eslint src --ext .ts,.tsx",
     "dbupgrade": "ts-node ./scripts/dbupgrade-wrapper.ts",
     "restoredb": "ts-node ./scripts/restore-database-wrapper.ts"
   },
@@ -47,10 +48,10 @@
     "@types/lodash": "^4.14.149",
     "@types/mongodb": "^3.3.16",
     "@types/rimraf": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "dotenv": "^8.2.0",
-    "eslint": "5.6.0",
+    "eslint": "6.5.1",
     "nodemon": "^2.0.4",
     "tslint": "^5.20.1",
     "typescript": "^3.7.4"
