--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "devDependencies": {
     "@types/mongodb": "^3.3.16",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "eslint": "5.6.0"
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
+    "eslint": "6.5.1",
+    "eslint-plugin-import": "^2.22.1"
   },
   "scripts": {
     "postinstall": "run-p install:api install:web",
