--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/spotify-api": "0.0.2",
     "customize-cra": "^0.9.1",
+    "eslint-plugin-react": "^7.22.0",
     "formik": "^1.5.1",
     "moment": "^2.24.0",
     "node-sass": "^4.14.1",
@@ -53,10 +54,10 @@
     "@types/react-lazyload": "^2.6.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-select": "^3.0.10",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "eslint": "5.6.0"
+    "eslint": "6.5.1"
   }
 }
