--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "eslint": "6.5.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0"
   },
   "scripts": {
     "postinstall": "run-p install:api install:web",
