--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,7 @@
         "no-constant-condition": 1,
         "no-empty": 1,
         "no-multi-spaces": 1,
+        "no-prototype-builtins": 0,
         "no-shadow": 2,
         "no-trailing-spaces": 2,
         "no-useless-catch": 0,
