--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "@types/spotify-api": "0.0.2",
     "@types/spotify-web-api-node": "^4.0.1",
     "agenda": "^3.0.0",
+    "body-parser": "1.18.3",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
