--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,7 +42,6 @@
         "no-empty": 1,
         "no-multi-spaces": 1,
         "no-prototype-builtins": 0,
-        "no-shadow": 2,
         "no-trailing-spaces": 2,
         "no-useless-catch": 0,
         "prefer-template": 2,
@@ -115,6 +114,7 @@
         "@typescript-eslint/no-explicit-any": 0,
         "@typescript-eslint/no-inferrable-types": 0,
         "@typescript-eslint/no-non-null-assertion": 0,
+        "@typescript-eslint/no-shadow": 2,
         "@typescript-eslint/no-use-before-define": 0,
         "@typescript-eslint/no-var-requires": 0
     }
