--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,8 @@
     "customize-cra": "^0.9.1",
     "eslint-plugin-react": "^7.22.0",
     "formik": "^1.5.1",
+    "history": "^4.7.2",
+    "lodash": "^4.17.4",
     "moment": "^2.24.0",
     "node-sass": "^4.14.1",
     "react": "^16.7.0",
@@ -31,7 +33,8 @@
     "sass-loader": "^7.1.0",
     "tslint": "^5.12.1",
     "typescript": "^3.2.2",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-transport": "^4.4.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
