--- a/web/package.json
+++ b/web/package.json
@@ -27,11 +27,10 @@
     "react-redux": "^7.2.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^3.4.4",
     "react-select": "^3.0.8",
     "redux": "^4.0.5",
     "sass-loader": "^7.1.0",
-    "tslint": "^5.12.1",
     "typescript": "^3.2.2",
     "winston": "^3.3.3",
     "winston-transport": "^4.4.0"
