--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig.base",
   "compilerOptions": {
-    "jsx": "preserve",
+    "jsx": "react",
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
@@ -11,7 +11,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "strict": false,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src",
