--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
         "ecmaVersion": 2018,
         "sourceType": "module"
     },
+    "root": true,
     "plugins": [
         "import",
         "simple-import-sort"
