--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,6 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/spotify-api": "0.0.2",
     "customize-cra": "^0.9.1",
-    "eslint-plugin-react": "^7.22.0",
     "formik": "^1.5.1",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
@@ -60,6 +59,7 @@
     "@typescript-eslint/parser": "^4.15.1",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "eslint": "6.5.1"
+    "eslint": "7.20.0",
+    "eslint-plugin-react": "^7.22.0"
   }
 }
