Add React Native Webview package

--- a/native/ios/Podfile
+++ b/native/ios/Podfile
@@ -8,6 +8,8 @@ target 'SmartList' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'SmartListTests' do
     inherit! :complete
     # Pods for testing
