--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^5.1.6",
     "@types/spotify-api": "0.0.2",
+    "classnames": "^2.2.6",
     "customize-cra": "^0.9.1",
     "formik": "^1.5.1",
     "history": "^4.7.2",
@@ -20,6 +21,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.7.0",
     "react-app-rewired": "^2.1.5",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^16.7.0",
     "react-ga": "^3.3.0",
     "react-lazyload": "^3.0.0",
