--- a/native/package.json
+++ b/native/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "SmartList",
-  "version": "0.0.1",
+  "name": "native",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
