--- a/native/package.json
+++ b/native/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-webview": "^11.2.3"
   },
   "devDependencies": {
