--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smartlist",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": true,
   "dependencies": {
     "@types/spotify-api": "0.0.2",
@@ -22,9 +22,10 @@
     "eslint-plugin-simple-import-sort": "^7.0.0"
   },
   "scripts": {
-    "postinstall": "run-p install:api install:web",
+    "postinstall": "run-p install:api install:web install:native",
     "install:api": "cd api && npm install",
     "install:web": "cd web && npm install",
+    "install:native": "cd native && npm install",
     "start": "npm run start:api",
     "start:api": "npm run start --prefix api",
     "start:web": "npm run start --prefix web",
