--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "express-async-handler": "^1.1.4",
     "express-http-context": "^1.2.3",
     "express-session": "^1.17.0",
+    "heroku-ssl-redirect": "^0.1.1",
     "http-errors": "^1.6.3",
     "lodash": "^4.17.19",
     "moment": "^2.24.0",
