Add env vars to build file for signed keystore

--- a/native/android/gradle.properties
+++ b/native/android/gradle.properties
@@ -26,3 +26,7 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
+
+# DO NOT enter keystore properties here. Such as:
+# SMARTLIST_UPLOAD_STORE_FILE, SMARTLIST_UPLOAD_KEY_ALIAS, SMARTLIST_UPLOAD_STORE_PASSWORD, SMARTLIST_UPLOAD_KEY_PASSWORD
+# This file will be checked in and those secrets should NOT be checked in
