--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -132,8 +132,8 @@ android {
         applicationId "com.smartlist"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 022
+        versionName "0.2.2"
     }
     splits {
         abi {
@@ -150,6 +150,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            if (project.hasProperty('SMARTLIST_UPLOAD_STORE_FILE')) {
+                storeFile file(SMARTLIST_UPLOAD_STORE_FILE)
+                storePassword SMARTLIST_UPLOAD_STORE_PASSWORD
+                keyAlias SMARTLIST_UPLOAD_KEY_ALIAS
+                keyPassword SMARTLIST_UPLOAD_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         debug {
@@ -158,7 +166,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
