--- a/native/package.json
+++ b/native/package.json
@@ -1,11 +1,12 @@
 {
   "name": "native",
-  "version": "0.2.1",
+  "version": "0.2.3",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "build:android": "cd android && ./gradlew bundleRelease",
     "test": "jest",
     "lint": "eslint . --ext .ts,.tsx"
   },
