--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -129,7 +129,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.smartlist"
+        applicationId "com.smartlistmusic.smartlist"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 023
