--- a/web/package.json
+++ b/web/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "proxy": "http://localhost:8080/",
   "dependencies": {
+    "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.45",
+    "@material-ui/pickers": "^3.3.10",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/react-router": "^4.4.3",
