--- a/web/package.json
+++ b/web/package.json
@@ -64,6 +64,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "eslint": "7.20.0",
-    "eslint-plugin-react": "^7.22.0"
+    "eslint-plugin-react": "^7.22.0",
+    "workbox-webpack-plugin": "^6.1.2"
   }
 }
