--- a/web/package.json
+++ b/web/package.json
@@ -55,6 +55,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
     "@types/lodash": "^4.14.149",
     "@types/react-lazyload": "^2.6.0",
     "@types/react-redux": "^7.1.7",
