--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "npm-run-all": "^4.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^4.0.2",
     "typescript": "^3.7.5",
     "winston": "^3.3.3"
   },
