Add meta description to index.html file

--- a/web/public/manifest.json
+++ b/web/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "Smartlist",
   "name": "Smartlist Music",
-  "description": "Automatic Spotify playlists by rules",
+  "description": "Automatic Spotify Playlists by Rules",
   "categories": [ "music", "productivity", "utilities" ],
   "icons": [
     {
