--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -44,6 +44,7 @@
             }
         ],
         "react/no-unused-state": 1,
+        "react/prop-types": 0,
         "react/self-closing-comp": 1
     }
 }
