--- a/web/package.json
+++ b/web/package.json
@@ -33,12 +33,14 @@
     "react-scripts": "^4.0.2",
     "redux": "^4.0.5",
     "sass-loader": "^7.1.0",
+    "shake.js": "^1.2.2",
     "typescript": "^3.2.2",
     "winston": "^3.3.3",
     "winston-transport": "^4.4.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
+    "start:ssl": "HTTPS=true SSL_CRT_FILE=../localhost.pem SSL_KEY_FILE=../localhost-key.pem react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "lint": "eslint src --ext .ts,.tsx",
