--- a/web/package.json
+++ b/web/package.json
@@ -61,6 +61,7 @@
     "@types/react-lazyload": "^2.6.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-select": "^3.0.10",
+    "@types/workbox-webpack-plugin": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "babel-core": "^6.26.3",
