--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^4.0.2",
+    "react-virtuoso": "^2.6.0",
     "redux": "^4.0.5",
     "sass-loader": "^7.1.0",
     "shake.js": "^1.2.2",
