--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@typescript-eslint/parser": "^4.15.1",
     "eslint": "7.20.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-simple-import-sort": "^7.0.0"
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "workbox-webpack-plugin": "^6.1.2"
   },
   "scripts": {
     "postinstall": "run-p install:api install:web install:native",
