--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "7.20.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "webpack": "4.44.2",
     "workbox-webpack-plugin": "^6.1.2"
   },
   "scripts": {
