--- a/web/package.json
+++ b/web/package.json
@@ -37,7 +37,8 @@
     "shake.js": "^1.2.2",
     "typescript": "^3.2.2",
     "winston": "^3.3.3",
-    "winston-transport": "^4.4.0"
+    "winston-transport": "^4.4.0",
+    "workbox-webpack-plugin": "^6.1.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -65,7 +66,6 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "eslint": "7.20.0",
-    "eslint-plugin-react": "^7.22.0",
-    "workbox-webpack-plugin": "^6.1.2"
+    "eslint-plugin-react": "^7.22.0"
   }
 }
