Upgrade react-scripts, webpack, babel, eslint

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,7 +10,8 @@
         "skipLibCheck": true,
         "esModuleInterop": true,
         "types": [
-            "spotify-api"
+            "spotify-api",
+            "jest"
         ]
     }
 }
