--- a/api/package.json
+++ b/api/package.json
@@ -54,9 +54,9 @@
     "@types/lodash": "^4.14.149",
     "@types/mongodb": "^3.3.16",
     "@types/rimraf": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "eslint": "7.20.0",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "eslint": "^8.3.0",
     "nodemon": "^2.0.4",
     "typescript": "^3.7.4"
   }
