--- a/native/.eslintrc.json
+++ b/native/.eslintrc.json
@@ -9,6 +9,8 @@
     "rules": {
         "no-multi-spaces": 1,
         
-        "prettier/prettier": 0
+        "prettier/prettier": 0,
+
+        "react-hooks/exhaustive-deps": 1
     }
 }
