--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/mongodb": "^3.3.16",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "eslint": "7.20.0",
-    "eslint-plugin-import": "^2.22.1",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "eslint": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-simple-import-sort": "^7.0.0"
   },
   "scripts": {
@@ -45,7 +46,7 @@
     "not op_mini all"
   ],
   "engines": {
-    "node": "10.15.x",
+    "node": "^14.0.0",
     "npm": "6.4.x"
   }
 }
