--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "node": true
+        "node": true,
+        "jest": true
     },
     "extends": [
         "../.eslintrc.json",
@@ -13,7 +14,8 @@
         }
     },
     "plugins": [
-        "react"
+        "react",
+        "jest"
     ],
     "rules": {
         "jsx-quotes": "error",
