--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:8080/",
   "dependencies": {
+    "@babel/runtime": "^7.16.3",
     "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
@@ -20,6 +21,7 @@
     "history": "^4.7.2",
     "lodash": "^4.17.21",
     "moment": "^2.24.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "node-sass": "^4.14.1",
     "react": "^16.7.0",
     "react-app-rewired": "^2.1.5",
@@ -30,7 +32,7 @@
     "react-redux": "^7.2.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^4.0.2",
+    "react-scripts": "^5.0.0",
     "react-virtuoso": "^2.6.0",
     "redux": "^4.0.5",
     "sass-loader": "^7.1.0",
@@ -55,17 +57,16 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/core": "^7.16.0",
     "@types/classnames": "^2.3.1",
     "@types/lodash": "^4.14.149",
     "@types/react-lazyload": "^2.6.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-select": "^3.0.10",
     "@types/workbox-webpack-plugin": "^5.1.8",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "eslint": "7.20.0",
-    "eslint-plugin-react": "^7.22.0"
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "eslint": "^8.3.0",
+    "eslint-plugin-react": "^7.27.1"
   }
 }
