--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node build/api/src/start.js",
     "dev": "nodemon",
+    "prebuild": "npm run lint",
     "build": "rm -rf ./build/ && npm run dbupgrade && tsc",
     "lint": "eslint src --ext .ts",
     "dbupgrade": "ts-node ./scripts/dbupgrade-wrapper.ts",
