--- a/native/package.json
+++ b/native/package.json
@@ -6,6 +6,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "prebuild": "npm run lint",
+    "build": "npm run build:android",
     "build:android": "cd android && ./gradlew bundleRelease",
     "test": "jest",
     "lint": "eslint . --ext .ts,.tsx"
