--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "prebuild": "npm run lint",
     "build": "rm -rf ./build/ && npm run dbupgrade && tsc",
     "lint": "eslint src --ext .ts",
+    "test": "jest",
     "dbupgrade": "ts-node ./scripts/dbupgrade-wrapper.ts",
     "restoredb": "ts-node ./scripts/restore-database-wrapper.ts"
   },
@@ -47,18 +48,23 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@jest/types": "^27.5.1",
     "@types/agenda": "^2.0.6",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express-session": "^1.17.0",
     "@types/http-errors": "^1.6.3",
+    "@types/jest": "^27.4.1",
     "@types/lodash": "^4.14.149",
     "@types/mongodb": "^3.3.16",
     "@types/rimraf": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "eslint": "^8.3.0",
+    "factory.ts": "^0.5.2",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.4",
-    "typescript": "^3.7.4"
+    "ts-jest": "^27.1.3",
+    "typescript": "^3.8.0"
   }
 }
