--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "npm-run-all": "^4.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "typescript": "^3.7.5",
+    "typescript": "^3.8.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -47,7 +47,8 @@
     "@typescript-eslint/parser": "^5.5.0",
     "eslint": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-simple-import-sort": "^7.0.0"
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "jest": "^27.5.1"
   },
   "engines": {
     "node": ">=14.0.0 <18.0.0",
