--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,8 +1,7 @@
 {
     "env": {
         "browser": true,
-        "node": true,
-        "jest": true
+        "node": true
     },
     "extends": [
         "../.eslintrc.json",
