--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -13,7 +13,8 @@
         "importHelpers": true,
         "noImplicitAny": false,
         "types": [
-            "node"
+            "node",
+            "jest"
         ],
         "typeRoots": [
             "node_modules/@types"
