--- a/web/package.json
+++ b/web/package.json
@@ -27,7 +27,7 @@
     "@material-ui/pickers": "^3.3.10",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
-    "@types/react-router": "^4.4.3",
+    "@types/react-router": "~5.0.1",
     "@types/react-router-dom": "^5.1.6",
     "@types/spotify-api": "0.0.2",
     "classnames": "^2.2.6",
@@ -45,8 +45,8 @@
     "react-ga": "^3.3.0",
     "react-lazyload": "^3.0.0",
     "react-redux": "^7.2.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
+    "react-router": "~5.0.1",
+    "react-router-dom": "~5.0.1",
     "react-scripts": "^5.0.0",
     "react-virtuoso": "^2.6.0",
     "redux": "^4.0.5",
