--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "npm-run-all": "^4.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "ts-node": "^8.6.1",
     "typescript": "^3.8.0",
     "winston": "^3.3.3"
   },
