--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "eslint": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3"
   },
   "engines": {
     "node": ">=14.0.0 <18.0.0",
