--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,7 @@
     "prebuild": "npm run lint && npm run test",
     "build": "rm -rf ./build/ && npm run dbupgrade && tsc",
     "lint": "eslint src --ext .ts",
-    "test": "jest --debug",
+    "test": "jest",
     "dbupgrade": "ts-node ./scripts/dbupgrade-wrapper.ts",
     "restoredb": "ts-node ./scripts/restore-database-wrapper.ts"
   },
