Add setimmediate polyfill, needed for winston

--- a/web/package.json
+++ b/web/package.json
@@ -51,6 +51,7 @@
     "react-virtuoso": "^2.6.0",
     "redux": "^4.0.5",
     "sass-loader": "^7.1.0",
+    "setimmediate": "^1.0.5",
     "shake.js": "^1.2.2",
     "typescript": "^3.8.0",
     "winston": "^3.3.3",
@@ -64,6 +65,7 @@
     "@types/react-lazyload": "^2.6.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-select": "^3.0.10",
+    "@types/setimmediate": "^1.0.2",
     "@types/workbox-webpack-plugin": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
