--- a/native/ios/Podfile
+++ b/native/ios/Podfile
@@ -1,7 +1,7 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '10.0'
+platform :ios, '11.0'
 
 target 'SmartList' do
   config = use_native_modules!
@@ -18,7 +18,7 @@ target 'SmartList' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!({ 'Flipper-Folly' => '2.3.0' })
+  use_flipper!
   post_install do |installer|
     flipper_post_install(installer)
   end
