Downgrade sentry packages to fix build

--- a/api/package.json
+++ b/api/package.json
@@ -20,8 +20,8 @@
     "@overnightjs/core": "^1.6.12",
     "@overnightjs/logger": "^1.1.10",
     "@seiren/mongoutils": "^1.0.2",
-    "@sentry/node": "^7.66.0",
-    "@sentry/profiling-node": "^1.2.1",
+    "@sentry/node": "~7.56.0",
+    "@sentry/profiling-node": "1.1.2",
     "@types/jest": "^27.4.1",
     "@types/node": "^13.1.6",
     "@types/spotify-api": "0.0.2",
