--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
     "start": "react-app-rewired start",
     "start:ssl": "HTTPS=true SSL_CRT_FILE=../localhost.pem SSL_KEY_FILE=../localhost-key.pem react-app-rewired start",
     "prebuild": "npm run lint && npm run test",
-    "build": "react-app-rewired build",
+    "build": "react-app-rewired build && compress-cra",
     "lint": "eslint src --ext .ts,.tsx",
     "test": "react-app-rewired test --watchAll=false",
     "eject": "react-scripts eject"
@@ -71,6 +71,7 @@
     "@types/workbox-webpack-plugin": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
+    "compress-create-react-app": "^1.4.4",
     "eslint": "^8.3.0",
     "eslint-plugin-react": "^7.27.1"
   }
