--- a/api/package.json
+++ b/api/package.json
@@ -72,6 +72,6 @@
     "jest": "^27.5.1",
     "nodemon": "^2.0.21",
     "ts-jest": "^27.1.3",
-    "typescript": "^3.8.0"
+    "typescript": "~4.4.4"
   }
 }
