--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "ts-node": "^8.6.1",
-    "typescript": "^3.8.0",
+    "typescript": "~4.4.4",
     "winston": "^3.3.3"
   },
   "devDependencies": {
